# DistributedJobScheduler

./: docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 1a1a588e7161_initial_migration.py  6d2e958d03b4_fix_job_status_and_add_remarks_to_job.py  73f9f410b064_fix_job_status_and_job_runs.py  a7ff07350402_update_job_status.py
app/: Dockerfile  main.py
app/api/: jobs.py
app/core/: config.py  queue.py  worker.py
app/database/: crud.py  db.py
app/jobs/: registry.py  send_mail.py
app/models/: job.py  job_run.py  job_status.py
app/scheduler/: __main__.py  scheduler.py
app/schemas/: create_job.py
app/worker/: __main__.py  worker.py
